# sdl-cpp-style

./: .gitignore  .gitmodules  README.md
Sample/: CMakeLists.txt
Sample/Source/: Sample.cpp
